# fuckthedealer

./: .gitignore  LICENSE  README.md  backend.cabal  bsconfig.json  fuck-the-dealer.cabal  index.html  package.json
backend/: Game.hs  Main.hs
src/: App.re
