name:                fuck-the-dealer
-- synopsis:
-- description:
-- bug-reports:
-- license:
-- copyright:
-- category:
version:             0.1.0.0
license-file:        LICENSE
author:              jwwwb
maintainer:          james@jwwwb.com
build-type:          Simple
extra-source-files:  CHANGELOG.md
cabal-version:       >=1.10

executable fuck-the-dealer
  main-is:             Main.hs
  hs-source-dirs:      backend
  other-modules:       Game
  -- other-eaxtensions:
  build-depends:       base >=4.10 && <4.14
                     , Spock >=0.11
                     , http-types
                     , text
                     , mtl
                     , random
  -- hs-source-dirs:
  default-language:    Haskell2010
